update-html set path

--- a/resources/app-template.html
+++ b/resources/app-template.html
@@ -32,8 +32,8 @@ if IE 7]>
     <!--vorlon-->
     <!--bugsnag-->
 
-    <script type="text/javascript" src="/app/app.js"></script>
-    <!--app-dev-->
+    <!--app-js-ph-->
+    <!--app-dev-js-ph-->
   <!--build.json-->
   </body>
 </
