--- a/resources/app.html
+++ b/resources/app.html
@@ -10,7 +10,7 @@ if IE 7]>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>
-        pagora
+        Pagora
     </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
@@ -33,7 +33,8 @@ if IE 7]>
     
 
     <script type="text/javascript" src="/app/app.js"></script>
-    <script type="text/javascript" src="/admin_new/app-dev.js"></script>
+    <script type="text/javascript" src="/app/app.js"></script>
+    <script type="text/javascript" src="/app/app-dev.js"></script>
   
   </body>
 </
