--- a/resources/app.html
+++ b/resources/app.html
@@ -14,8 +14,8 @@ if IE 7]>
     </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <link rel="stylesheet" type="text/css" href="/admin_new/app.css">
-    <link rel="icon" href="/admin_new/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" type="text/css" href="/app/app.css">
+    <link rel="icon" href="/app/favicon.ico" type="image/x-icon"/>
   </head>
   <body class="h-100 w-100">
       <section id="app" class="h-100">
