--- a/resources/public/devcards.html
+++ b/resources/public/devcards.html
@@ -9,7 +9,7 @@ if IE 7]>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>DC Admin Dev Cards</title>
+    <title>Aum Dev Cards</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <link rel="stylesheet" type="text/css" href="/admin_new/app.css">
