--- a/resources/app.html
+++ b/resources/app.html
@@ -10,7 +10,7 @@ if IE 7]>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>
-        pagora
+        Pagora
     </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
@@ -30,9 +30,9 @@ if IE 7]>
           </div>
       </section>
       <!--vorlon-->
-      <script type=text/javascript src=/app/bugsnag.min.js data-apikey="3464720f5367914849487b96cb428fc8" data-releasestage=":prod" data-appversion="0.1.0"></script>
+      
 
       <script type="text/javascript" src="/app/app.js"></script>
-      <script>window.build={version:"0.1.0",branch:"master",tag:"fatal: No names found, cannot describe anything.",timestamp:"2020-04-29 17:09:49",sha:"1c96c58",env:"prod"}</script>
+      
   </body>
 </
