--- a/resources/app.html
+++ b/resources/app.html
@@ -30,15 +30,15 @@ if IE 7]>
           </div>
       </section>
       <!--vorlon-->
-      <SCRIPT>var isomorphicDir="../isomorphic/";</SCRIPT>
-      <SCRIPT SRC=../isomorphic/system/modules/ISC_Core.js></SCRIPT>
-      <SCRIPT SRC=../isomorphic/system/modules/ISC_Foundation.js></SCRIPT>
-      <SCRIPT SRC=../isomorphic/system/modules/ISC_Containers.js></SCRIPT>
-      <SCRIPT SRC=../isomorphic/system/modules/ISC_Grids.js></SCRIPT>
-      <SCRIPT SRC=../isomorphic/system/modules/ISC_Forms.js></SCRIPT>
-      <SCRIPT SRC=../isomorphic/system/modules/ISC_DataBinding.js></SCRIPT>
-      <SCRIPT SRC=../isomorphic/skins/SmartClient/load_skin.js></SCRIPT>
-
+      <!-- <SCRIPT>var isomorphicDir="../isomorphic/";</SCRIPT>
+           <SCRIPT SRC=../isomorphic/system/modules/ISC_Core.js></SCRIPT>
+           <SCRIPT SRC=../isomorphic/system/modules/ISC_Foundation.js></SCRIPT>
+           <SCRIPT SRC=../isomorphic/system/modules/ISC_Containers.js></SCRIPT>
+           <SCRIPT SRC=../isomorphic/system/modules/ISC_Grids.js></SCRIPT>
+           <SCRIPT SRC=../isomorphic/system/modules/ISC_Forms.js></SCRIPT>
+           <SCRIPT SRC=../isomorphic/system/modules/ISC_DataBinding.js></SCRIPT>
+           <SCRIPT SRC=../isomorphic/skins/SmartClient/load_skin.js></SCRIPT>
+      -->
       <script type="text/javascript" src="/app/app.js"></script>
 
       
