run frontend without websocket connection

--- a/resources/app.html
+++ b/resources/app.html
@@ -10,7 +10,7 @@ if IE 7]>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>
-        pagora
+        Pagora
     </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
@@ -33,6 +33,6 @@ if IE 7]>
       
 
       <script type="text/javascript" src="/app/app.js"></script>
-      <script>window.build={version:"0.1.0",branch:"sevenguis",tag:"fatal: No names found, cannot describe anything.",timestamp:"2020-12-15 13:45:21",sha:"db6aebe",env:"prod"}</script>
+      
   </body>
 </
